# ETF-investment-plan

./: Cargo.toml  etf-investment-plan.h  libetfinvestmentplan.h
database/: Cargo.toml  db
database/src/: lib.rs
investment-planner/: Cargo.toml
investment-planner/src/: calc_etf_items.rs  lib.rs
investment-strategy/: Cargo.toml
investment-strategy/src/: knap_sack.rs  lib.rs  rclist.rs
src/: lib.rs  main.rs
yahoo-finance-info/: Cargo.toml
yahoo-finance-info/src/: lib.rs
